# LeSpeciale

./: .gitignore  Mapping_ebpf_syscall.org  README.md  get-lfsc-checker.sh
lfsc-lexer/: Cargo.toml  perf.data  syntax.org
lfsc-lexer/lfsc_anorm/src/: alpha.rs  lib.rs  lookup.rs  shift.rs  subst.rs
lfsc-lexer/lfsc_syntax/src/: ast.rs  free.rs  lib.rs  sexp.rs
lfsc-lexer/lfsc_syntax/test/: tests.rs
lfsc-lexer/signatures/: strings_rules.plf
lfsc-lexer/src/: div.plf  main.rs  overflow.plf  smol.plf  test.lfsc
lfsc-lexer/src/parser/: lexer.rs  location.rs  mod.rs  parser.rs  parser2.rs  sexp_parser.rs  token.rs
lfsc-lexer/src/typechecking/: alpha.rs  check.rs  context.rs  errors.rs  infer.rs  mod.rs  nbe.rs  occurs.rs  readback.rs  sc.rs  shift.rs  subst.rs  synth.rs  values.rs
lfsc-lexer/tagless/: Cargo.toml
lfsc-lexer/tagless/src/: lib.rs  main.rs  tagless.rs
lfscr/: Cargo.toml
lfscr/lfsc_anorm/: Cargo.toml
lfscr/lfsc_syntax/: Cargo.toml
lfscr/signatures/: arith_rules.plf  core_defs.plf
lfscr/src/: bvaddition.plf  large.plf  main.rs  test.plf  test2.plf
presentation/: main.aux  main.fdb_latexmk  main.fls  main.snm  main.tex
presentation/.auctex-auto/: main.el
references/: checker.org
report/: .gitignore  conclusion.org  introduction.org  main.org  references.bib
report/Background/: curryhoward.org  ebpf.org  kernel.org  linux.org  pcc.org  rust.org
report/Design/: design.org  (+2 more)
syscall/: syscall.c
vcgen/: CHANGELOG.md  README.md  package.yaml  results.txt  stack.yaml  vcgen.cabal
vm/: README.md  create-image.sh  start-qemu.sh
(+55 files in other folders)
